--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+        with:
+          node-version: 12.16.3
       - name: Install dependencies
         run: yarn install
       - name: Lint
